add new features, update f updateSales, add css

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>Gumballs (JSON)</title>
     <!-- <script src="gumballs.js"></script> -->
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <!-- загружаемый с другого домена js может вызывать функфии в нашем -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
+    <h1>Gumball Sales</h1>
     <div id="sales">
         
     </div>
