--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     <div id="sales">
         
     </div>
+    <script src="http://gumball.wickedlysmart.com/?callback=updateSales"></script>
+    <!-- Когда браузер сталкивается с элементом <script>
+    на странице, он отправляет HTTP-запрос по URL-адресу источника
+    используем параметр callback и указываем имя нашей функции updateSales -->
 </body>
 </html>
