add f handleRefresh, fix a few lines of code, delete tag script in html

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 </head>
 <body>
     <h1>Gumball Sales</h1>
-    <div id="sales">
-        
-    </div>
-    <script src="http://gumball.wickedlysmart.com/?callback=updateSales"></script>
-    <!-- Когда браузер сталкивается с элементом <script>
-    на странице, он отправляет HTTP-запрос по URL-адресу источника
-    используем параметр callback и указываем имя нашей функции updateSales -->
+    <div id="sales"></div>
 </body>
 </html>
